hphp/hack/test/typecheck/const_attribute/union_intersection/const_union_and_newtype_fail.php.exp
File "const_union_and_newtype_fail.php", line 24, characters 7-8:
Cannot mutate a `__Const` property (Typing[4196])
