hphp/hack/test/typecheck/const_attribute/union_intersection/const_union_and_newtype_fail.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

class A {
  <<__Const>>
  public int $CA;

  public function __construct() {
    $this->CA = 4;
  }
}

newtype B = A;

class C {
  public int $CA;

  public function __construct() {
    $this->CA = 0;
  }
}

function fail((B | C) $a): void {
  $a->CA = 42;
}
